# WordCount

./: CMakeLists.txt  README.md  WordCount.cpp  project8
texts/: alchemist.txt  atlantis.txt  common.txt  comparison.txt  comparisons.txt  poems.txt  sonnets.txt
