cmake_minimum_required(VERSION 3.6)
project(project8)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -Wall -Werror -Wextra -pedantic -pedantic-errors")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})

add_executable(project8
        texts/alchemist.txt
        texts/atlantis.txt
        texts/common.txt
        texts/hamlet.txt
        texts/poems.txt
        texts/sonnets.txt
        WordCount.cpp)

